syntax = "proto3";


package postfinance.discovery.v1;

option go_package = "discoveryv1";
option java_multiple_files = true;
option java_outer_classname = "ServerApiProto";
option java_package = "ch.postfinance.discovery.v1";

import "server.proto";
import "google/api/annotations.proto";

// ServerAPI is responsible for registering and unregistering servers.
service ServerAPI {
  // RegisterServer registers a server.
  rpc RegisterServer(RegisterServerRequest) returns (RegisterServerResponse) {
    option (google.api.http) = {
      post: "/v1/servers"
      body: "*"
    };
  }
  // UnRegisterServer unregisters a server.
  rpc UnregisterServer(UnregisterServerRequest) returns (UnregisterServerResponse) {
    option (google.api.http) = {
      delete: "/v1/servers/{name}"
    };
  }
  // ListServer lists all servers.
  rpc ListServer(ListServerRequest) returns (ListServerResponse) {
    option (google.api.http) = {
      get: "/v1/servers"
    };
  }
}


message RegisterServerRequest {
  string name = 1;
  map<string, string> labels = 2;
}

message RegisterServerResponse {
  Server server = 1;
}

message UnregisterServerRequest {
  string name = 1;
}

message UnregisterServerResponse {
}

message ListServerRequest {
}

message ListServerResponse {
  repeated Server servers = 1;
}
