syntax = "proto3";


package postfinance.discovery.v1;

option go_package = "discoveryv1";
option java_multiple_files = true;
option java_outer_classname = "ServiceApiProto";
option java_package = "ch.postfinance.discovery.v1";

import "postfinance/discovery/v1/service.proto";
import "google/api/annotations.proto";

// ServiceAPI is responsible for registering and unregistering services.
service ServiceAPI {
  // Register registers a service.
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/services"
      body: "*"
    };
  }
  // UnRegister unregisters a service.
  rpc UnRegister(UnRegisterRequest) returns (UnRegisterResponse) {
    option (google.api.http) = {
      delete: "/v1/services/{namespace}/{id}"
    };
  }
  // List lists all services.
  rpc List(ListRequest) returns (ListResponse) {
    option (google.api.http) = {
      get: "/v1/services"
    };
  }
  // List lists all namespaces.
  rpc ListNamespace(ListNamespaceRequest) returns (ListNamespaceResponse) {
    option (google.api.http) = {
      get: "/v1/namespaces"
    };
  }
}


message RegisterRequest {
  string name = 1;
  string endpoint = 2;
  map<string, string> labels = 3;
  string description = 4;
  string namespace = 5;
}

message RegisterResponse {
  Service service = 1;
}

message UnRegisterRequest {
  string id = 1;
  string namespace = 2;
}

message UnRegisterResponse {
}

message ListRequest {
  string namespace = 1;
}

message ListResponse {
  repeated Service services = 1;
}

message ListNamespaceRequest {
}

message ListNamespaceResponse {
  repeated string namespaces = 1;
}


